# uml_generator

./: .gitignore  README.md  diagram.mmd  main.py  pyproject.toml
uml_generator/: entities.py  file_scanner.py
