[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Nicolas_dmb <gyfeix@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
tree-sitter = "0.24.0"
tree-sitter-javascript ="0.23.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"